start migrating models from WIP spec into demo registry
